src/objects/Credit_Note__c.object
<CustomObject>
    <description>[25 Feb 2016] [Credit Note CR] Credit Note is a commercial document issued by SPH to refund customer for the unconsumed copies of publications which Customer already paid in previous Invoices.</description>
    <fields>
        <fullName>ARMS_Number__c</fullName>
        <formula>Billing_Account__r.ARMS_Account_Number__c</formula>
        <label>ARMS Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Billing_Account__r.Zuora__Account__r.AccountNumber</formula>
        <label>Subscriber Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Billing Account where this Credit Note belongs to</description>
        <label>Billing Account</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Number__c</fullName>
        <description>For ARMS,  Credit Note Number Range is :  0000200000 – 0000399999
For Non ARMS Credit Note Number Format: CN-{00000000}. Same as Name field</description>
        <label>Credit Note Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Date__c</fullName>
        <description>Date when this Credit Note is generated</description>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_PDF_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator if the Credit Note PDF is already generated</description>
        <label>Is PDF Generated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The negative invoice which this Credit Note is generated from</description>
        <label>Source Invoice</label>
        <referenceTo>Zuora__ZInvoice__c</referenceTo>
        <relationshipLabel>Credit Notes (Converted To)</relationshipLabel>
        <relationshipName>CN_Source_INV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <description>•	Local GST Applicable: GST Rate when the Credit Note is generated
•	GST Out Scope Customers: 0%
•	Overseas Customers: 0%</description>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>To_ARMS_Time__c</fullName>
        <description>Time when this record is sent to ARMS. Only valid for ARMS Billing Account Credit Notes</description>
        <label>ARMS Interface Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Amt_After_Tax__c</fullName>
        <description>Roll-up summary from Credit Note Items: Amount After Tax</description>
        <label>Total Amount After Tax</label>
        <summarizedField>Credit_Note_Item__c.Amt_After_Tax__c</summarizedField>
        <summaryForeignKey>Credit_Note_Item__c.Credit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Amt_Before_Tax__c</fullName>
        <description>Roll-up summary from Credit Note Items: Amount Before Tax</description>
        <label>Total Amount Before Tax</label>
        <summarizedField>Credit_Note_Item__c.Amt_Before_Tax__c</summarizedField>
        <summaryForeignKey>Credit_Note_Item__c.Credit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Tax_Amt__c</fullName>
        <description>Roll-up summary from Credit Note Items: Tax Amount</description>
        <label>Total Tax Amount</label>
        <summarizedField>Credit_Note_Item__c.Tax_Amt__c</summarizedField>
        <summaryForeignKey>Credit_Note_Item__c.Credit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Tax_Exempt_Amt__c</fullName>
        <description>Roll-up summary from Credit Note Items: Tax Exempt  Amount</description>
        <label>Total Tax Exempt Amount</label>
        <summarizedField>Credit_Note_Item__c.Tax_Exempt_Amt__c</summarizedField>
        <summaryForeignKey>Credit_Note_Item__c.Credit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Credit Note</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Credit_Note_Number__c</columns>
        <columns>Billing_Account__c</columns>
        <columns>Document_Date__c</columns>
        <columns>Account_Number__c</columns>
        <columns>ARMS_Number__c</columns>
        <columns>Source_Invoice__c</columns>
        <columns>Total_Amt_Before_Tax__c</columns>
        <columns>Tax_Rate__c</columns>
        <columns>Total_Tax_Amt__c</columns>
        <columns>Total_Tax_Exempt_Amt__c</columns>
        <columns>Total_Amt_After_Tax__c</columns>
        <columns>Is_PDF_Generated__c</columns>
        <columns>To_ARMS_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>